<resources>
    <string name="app_name">Alura Viagens</string>
    <string name="conteudo_do_banner_inicial">Banner inicial dos pacotes</string>
    <string name="especiais">Especiais</string>
    <string name="pais">Brasil</string>
    <string name="local">São Paulo</string>
    <string name="dias">2 dias</string>
    <string name="data">08/12 - 10/12 de 2017</string>
    <string name="text_preco_final">Preço final:</string>
    <string name="valor">R$ 243,99</string>
    <string name="botao_realizar_pagamento">Realizar pagamento</string>
    <string name="imagem_do_local_do_pacote">Imagem do local do pacote</string>
    <string name="texto_informativo">Digite as informações do cartão de crédito que você deseja usar para o pagamento</string>
    <string name="valor_da_compra">Valor da compra:</string>
    <string name="n_mero_do_cart_o">Número do cartão</string>
    <string name="data_mes">MM</string>
    <string name="data_ano">AA</string>
    <string name="cvc_cartao">CVC</string>
    <string name="nome_no_cartao">Nome no cartão</string>
    <string name="botao_finalizar_compra">Finalizar compra</string>
    <string name="confira_o_resumo_da_compra">Confira o resumo da compra:</string>
    <string name="compra_realizada_com_sucesso">Compra realizada com sucesso :)</string>
    <string name="parabens">Parabéns!</string>
    <string name="imagem_do_local_selecionado_no_pacote">Imagem do local selecionado no pacote</string>
    <string name="banner_do_resumo_da_compra">Banner do resumo da compra</string>
</resources>