<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/resumo_compra_iv_banner"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@android:color/holo_orange_dark"
        android:contentDescription="@string/banner_do_resumo_da_compra"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/resumo_compra_tv_parabens"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/parabens"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/resumo_compra_iv_banner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/resumo_compra_tv_compra_realizada_sucesso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/compra_realizada_com_sucesso"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/resumo_compra_tv_parabens"
        app:layout_constraintStart_toStartOf="@+id/resumo_compra_tv_parabens"
        app:layout_constraintTop_toBottomOf="@id/resumo_compra_tv_parabens" />

    <TextView
        android:id="@+id/resumo_compra_tv_confira_o_resumo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/confira_o_resumo_da_compra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resumo_compra_iv_banner" />

    <ImageView
        android:id="@+id/resumo_compra_iv_imagem_pacote"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/imagem_do_local_selecionado_no_pacote"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resumo_compra_tv_confira_o_resumo"
        tools:srcCompat="@drawable/sao_paulo_sp" />

    <TextView
        android:id="@+id/resumo_compra_tv_local"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resumo_compra_iv_imagem_pacote"
        tools:text="@string/local" />

    <TextView
        android:id="@+id/resumo_compra_tv_dias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resumo_compra_tv_local"
        tools:text="@string/data" />

    <TextView
        android:id="@+id/resumo_compra_tv_valor_do_pacote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resumo_compra_tv_dias"
        tools:text="@string/valor" />


</androidx.constraintlayout.widget.ConstraintLayout>