<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/resumo_pacote_imageview"
        android:layout_width="wrap_content"
        android:layout_height="140dp"
        android:contentDescription="@string/imagem_do_local_do_pacote"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/sao_paulo_sp" />

    <TextView
        android:id="@+id/resumo_pacote_tv_local"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resumo_pacote_imageview"
        tools:text="@string/local" />

    <TextView
        android:id="@+id/resumo_pacote_tv_dias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/resumo_pacote_tv_local"
        app:layout_constraintTop_toBottomOf="@id/resumo_pacote_tv_local"
        tools:text="@string/dias" />

    <TextView
        android:id="@+id/resumo_pacote_tv_data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/resumo_pacote_tv_preco"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@id/resumo_pacote_tv_dias"
        app:layout_constraintTop_toBottomOf="@id/resumo_pacote_tv_dias"
        tools:text="@string/data" />

    <TextView
        android:id="@+id/resumo_pacote_tv_preco_final"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/resumo_pacote_tv_preco"
        app:layout_constraintEnd_toEndOf="@+id/resumo_pacote_tv_preco"
        tools:text="@string/text_preco_final" />

    <TextView
        android:id="@+id/resumo_pacote_tv_preco"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="textEnd"
        android:gravity="end"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/resumo_pacote_tv_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/resumo_pacote_tv_data"
        tools:text="@string/valor" />

    <Button
        android:id="@+id/resumo_pacote_button_pagamento"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/botao_redondo_laranja"
        android:text="@string/botao_realizar_pagamento"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>