<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/lista_pacotes_banner"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:background="#7b1fa2"
        android:contentDescription="@string/conteudo_do_banner_inicial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/lista_pacotes_tv_especiais"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/especiais"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@id/lista_pacotes_banner"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/lista_pacotes_banner"
        app:layout_constraintTop_toTopOf="@id/lista_pacotes_banner" />

    <TextView
        android:id="@+id/lista_pacotes_tv_pais"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/pais"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/lista_pacotes_tv_especiais"
        app:layout_constraintTop_toBottomOf="@+id/lista_pacotes_tv_especiais" />

    <ListView
        android:id="@+id/lista_pacotes_listview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:divider="@null"
        android:dividerHeight="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lista_pacotes_banner"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/item_pacote" />

</androidx.constraintlayout.widget.ConstraintLayout>